# BYOI

./: .gitignore  CMakeLists.txt  notes.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: BYOILnf.cpp  BYOILnf.h  DragAndDrop.cpp  DragAndDrop.h
